--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,33 @@
 page-home {
-  .rounded-border {
-    border: solid 1px black;
-    border-radius: 5px;
+
+  ion-content {
+
+    background: transparent url("../assets/imgs/wallpaper.jpg") no-repeat !important;
+
+    .icon-container {
+      color: #fff;
+      background-color: rgba(255, 255, 255, 0.2);
+      border-radius: 25px;
+      padding: 10px 0;
+      margin: 5px;
+      font-size: 1.2em;
+      font-weight: 600;
+
+      ion-icon {
+        font-size: 14vw;
+      }
+
+      p {
+        margin: 5px 0 0 0;
+      }
+
+    }
+
+    .bottom-row {
+        position: absolute;
+        width: 100%;
+        bottom: 0;
+    }
+
   }
 }
