--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,6 +6,7 @@ page-home {
     background-size: cover !important;
 
     .icon-container {
+      position: relative;
       color: #fff;
       background-color: rgba(255, 255, 255, 0.2);
       border-radius: 25px;
@@ -16,6 +17,13 @@ page-home {
 
       ion-icon {
         font-size: 14vw;
+      }
+
+      ion-badge {
+        position: absolute;
+        bottom: -5px;
+        right: -5px;
+        background-color: red;
       }
 
       p {
